--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "dotenv": "^6.2.0",
     "graphql": "^14.6.0",
     "isemail": "^3.1.3",
+    "knex": "^0.21.17",
+    "lodash": "^4.17.20",
     "mime": "^2.4.4",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "apollo": "^2.1.8",
